--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
           <label>B:</label> <input type="range" step="1" min="0" max="255" v-model="baseColor[2]" />
           {{ baseColor[2] }}
         </div>
+        <p>※たいていはデフォルトで ok</p>
+        <p>※取り出したい色と取り出したくない色の差が大きくなるように調整します</p>
       </section>
 
       <section>
